--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <body>
 
   <header>
-    <img src="assets/pusaq-logo.jpeg" alt="Pusaq Logo" />
+   <img src="pusaq-logo.jpeg" alt="Pusaq Logo" />
     <div></div>
   </header>
 
