--- a/index.html
+++ b/index.html
@@ -10,27 +10,24 @@
       font-family: 'Montserrat', sans-serif;
       background-color: #022f60;
       color: white;
+      text-align: center;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
 
-    header {
-      width: 100%;
-      background: white;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    .logo {
+      margin: 3rem 0 1.5rem;
     }
 
-    header img {
-      height: 40px;
+    .logo img {
+      height: 80px;
+      max-width: 90%;
     }
 
     h1 {
-      margin: 2rem 0 1rem;
       font-size: 2rem;
+      margin-bottom: 2rem;
     }
 
     .user-grid {
@@ -38,7 +35,7 @@
       grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
       gap: 2rem;
       max-width: 800px;
-      margin: 1rem auto 2rem;
+      margin: 0 auto 3rem;
       padding: 0 1rem;
     }
 
@@ -81,49 +78,10 @@
       }
     }
 
-    .login-section {
-      background: white;
-      color: #022f60;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      max-width: 400px;
-      width: 90%;
-      margin-bottom: 2rem;
-      text-align: center;
-    }
-
-    .login-section input {
-      width: 100%;
-      padding: 10px;
-      margin: 0.5rem 0;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-
-    button {
-      background-color: #0271ff;
-      color: white;
-      font-weight: bold;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 6px;
-      font-size: 1rem;
-      cursor: pointer;
-      margin-top: 1rem;
-      transition: background-color 0.3s, box-shadow 0.3s;
-    }
-
-    button:hover {
-      background-color: #d81f26;
-      box-shadow: 0 0 12px 4px rgba(216, 31, 38, 0.5);
-    }
-
     @media (max-width: 600px) {
       h1 {
         font-size: 1.4rem;
-        text-align: center;
+        margin-bottom: 1rem;
       }
 
       .user-grid {
@@ -139,18 +97,17 @@
         font-size: 0.9rem;
       }
 
-      .login-section {
-        padding: 1.5rem;
+      .logo img {
+        height: 60px;
       }
     }
   </style>
 </head>
 <body>
 
-  <header>
-   <img src="pusaq-logo.jpeg" alt="Pusaq Logo" />
-    <div></div>
-  </header>
+  <div class="logo">
+    <img src="pusaq-logo.jpeg" alt="Pusaq Logo" />
+  </div>
 
   <h1>Who's working today?</h1>
 
@@ -185,26 +142,11 @@
     </div>
   </div>
 
-  <div class="login-section">
-    <h2>Or log in manually</h2>
-    <input type="text" id="username" placeholder="Enter name" />
-    <button onclick="manualLogin()">Login</button>
-  </div>
-
   <script>
     function loginAs(name) {
       sessionStorage.setItem("currentUser", name);
       const isAdmin = name === "Yannick" || name === "Boris";
       window.location.href = isAdmin ? "admin.html" : "dashboard.html";
-    }
-
-    function manualLogin() {
-      const name = document.getElementById("username").value.trim();
-      if (!name) {
-        alert("Please enter a name");
-        return;
-      }
-      loginAs(name);
     }
   </script>
 </body>
