--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     }
 
     .user-box:hover img {
-      box-shadow: 0 0 15px 4px rgba(255, 0, 0, 0.6);
+      box-shadow: 0 0 15px 4px #ffff48;
       transform: scale(1.05);
     }
 
@@ -106,7 +106,7 @@
 <body>
 
   <div class="logo">
-    <img src="pusaq-logo1.jpeg" alt="Pusaq Logo" />
+    <img src="pusaq-logo.jpeg" alt="Pusaq Logo" />
   </div>
 
   <h1>Who's working today?</h1>
