--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <body>
 
   <div class="logo">
-    <img src="pusaq-logo.jpeg" alt="Pusaq Logo" />
+    <img src="pusaq-logo1.jpeg" alt="Pusaq Logo" />
   </div>
 
   <h1>Who's working today?</h1>
