--- a/admin.html
+++ b/admin.html
@@ -34,16 +34,13 @@
     h1 {
       text-align: center;
       color: white;
-      margin-top: 2rem;
+      margin: 2rem 0 1rem;
     }
 
     .container {
-      max-width: 1100px;
-      margin: 2rem auto;
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      padding: 0 1rem;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 1rem;
     }
 
     .card {
@@ -51,6 +48,7 @@
       padding: 2rem;
       border-radius: 12px;
       box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+      margin-bottom: 2rem;
     }
 
     .card h2 {
@@ -58,7 +56,7 @@
       color: #022f60;
     }
 
-    input, select, textarea, button {
+    input, select, button {
       width: 100%;
       padding: 10px;
       margin-top: 10px;
@@ -66,7 +64,7 @@
       font-size: 1rem;
     }
 
-    input, select, textarea {
+    input, select {
       border: 1px solid #ccc;
     }
 
@@ -132,7 +130,7 @@
       }
 
       .card {
-        padding: 1rem;
+        padding: 1.5rem;
         margin: 1rem 0;
       }
 
@@ -160,31 +158,30 @@
         font-weight: bold;
         color: #333;
       }
-
-      .progress-bar {
-        height: 8px;
-      }
-
-      .progress-fill {
-        height: 8px;
-      }
     }
   </style>
 </head>
 <body>
 
   <div class="topbar">
-    <img src="assets/pusaq-logo.jpeg" alt="Pusaq Logo" />
+    <img src="pusaq-logo.jpeg" alt="Pusaq Logo" />
     <div class="nav-links">
       <a href="admin-calendar-grid.html">📅 Grid View</a>
-      <a href="admin-calendar.html">🗓 List View</a>
       <a href="profile.html">👤 Profile</a>
     </div>
   </div>
 
-  <h1>📊 Pusaq Project Manager</h1>
+  <h1>📊 Admin Dashboard</h1>
 
   <div class="container">
+
+    <!-- Floating comment input -->
+    <div class="card">
+      <h2>Floating Login Message 💬</h2>
+      <input type="text" id="floatingMessage" placeholder="Type your message for the login screen..." />
+      <button onclick="saveFloatingMessage()">💾 Save Message</button>
+    </div>
+
     <!-- Task creation -->
     <div class="card">
       <h2>Create New Task</h2>
@@ -228,6 +225,25 @@
 
   <script>
     const API_BASE = "https://api.pusaq.app/api";
+    const currentUser = sessionStorage.getItem("currentUser");
+
+    if (!currentUser) {
+      alert("Please log in.");
+      window.location.href = "index.html";
+    }
+
+    // Load saved message
+    const messageInput = document.getElementById("floatingMessage");
+    const savedMessage = localStorage.getItem(`comment_${currentUser}`);
+    if (savedMessage) {
+      messageInput.value = savedMessage;
+    }
+
+    function saveFloatingMessage() {
+      const msg = messageInput.value.trim();
+      localStorage.setItem(`comment_${currentUser}`, msg);
+      alert("✅ Message saved! It will show up on the login screen.");
+    }
 
     async function fetchTasks() {
       const res = await fetch(`${API_BASE}/tasks`);
@@ -284,7 +300,7 @@
 
       if (response.ok) {
         alert("✅ Task created!");
-        fetchTasks(); // refresh
+        fetchTasks();
         document.getElementById("taskTitle").value = "";
         document.getElementById("assignedTo").value = "";
         document.getElementById("deadline").value = "";
