--- a/dashboard.html
+++ b/dashboard.html
@@ -167,7 +167,7 @@
   <div class="accordion" id="taskContainer"></div>
 
   <script>
-    const API_BASE = "https://api.pusaq.app/api";
+    const API_BASE = "https://tasks.pusaq8.com/public/api";
     const currentUser = sessionStorage.getItem("currentUser");
     if (!currentUser) {
       alert("Please log in.");
