--- a/admin.html
+++ b/admin.html
@@ -224,8 +224,8 @@
   </div>
 
   <script>
-    const API_BASE = "https://api.pusaq.app/api";
-    const currentUser = sessionStorage.getItem("currentUser");
+const API_BASE = "https://tasks.pusaq8.com/public/api";
+const currentUser = sessionStorage.getItem("currentUser");
 
     if (!currentUser) {
       alert("Please log in.");
